packages/typ/tests/fixtures/diagnostics/0542_functor_abstract_value_as_int_01.ml
module type Arg_alpha = sig
  type t
  val x : t
end

module Make_alpha (X : Arg_alpha) = struct
  let y : int = X.x
end
